package mvp;

import "mvp/OrbitalImageFileDescriptor.proto";
import "mvp/MVPUserSettings.proto";
import "vw/Plate/PlateGeoReferenceDesc.proto";

message MVPWorkspaceRequest {
  required string result_platefile = 1;
  required string internal_result_platefile = 2;
  required vw.platefile.PlateGeoReferenceDesc plate_georef = 3;
  required MVPUserSettings user_settings = 4;
  repeated OrbitalImageFileDescriptor orbital_images = 5;
  repeated int32 render_bbox = 6;
  optional int32 render_level = 7 [default=-1];
  optional bool use_octave = 8 [default=false];
  optional bool draw_footprints = 9 [default=false];
}
